--- a/OverTap/Base.lproj/Main.storyboard
+++ b/OverTap/Base.lproj/Main.storyboard
@@ -21,21 +21,68 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iDS-Hp-Tv7" customClass="DrawRect" customModule="OverTap" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ooK-by-ZM8">
+                                <rect key="frame" x="16" y="20" width="128" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="Oho-UH-HBT" appends="YES" id="FFR-y1-lEB"/>
+                                    <outletCollection property="gestureRecognizers" destination="RJY-um-Tj1" appends="YES" id="NEY-hB-lX4"/>
+                                    <outletCollection property="gestureRecognizers" destination="iRH-2f-fd3" appends="YES" id="lH1-i4-7Kj"/>
+                                </connections>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9yp-hq-BXm">
+                                <rect key="frame" x="231" y="513" width="128" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.2709960938" green="0.51323499179999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="p3k-rS-FTV" appends="YES" id="Ztt-3P-Wka"/>
+                                    <outletCollection property="gestureRecognizers" destination="3v1-b2-Qz7" appends="YES" id="qnC-F6-PeY"/>
+                                    <outletCollection property="gestureRecognizers" destination="S59-1K-Qpx" appends="YES" id="cnN-gP-Iao"/>
+                                </connections>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="iDS-Hp-Tv7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="7Y7-3B-pvo"/>
-                            <constraint firstItem="iDS-Hp-Tv7" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="ZT6-kS-IC5"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="iDS-Hp-Tv7" secondAttribute="bottom" id="vH7-iB-NC3"/>
-                            <constraint firstAttribute="trailing" secondItem="iDS-Hp-Tv7" secondAttribute="trailing" id="wjr-up-tKp"/>
-                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="view1" destination="ooK-by-ZM8" id="uHV-KW-sRS"/>
+                        <outlet property="view2" destination="9yp-hq-BXm" id="Yxo-Us-3q7"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="Oho-UH-HBT">
+                    <connections>
+                        <action selector="handlePanWithRecognizer:" destination="BYZ-38-t0r" id="qZs-A4-ksw"/>
+                        <outlet property="delegate" destination="BYZ-38-t0r" id="faL-Ms-OKS"/>
+                    </connections>
+                </panGestureRecognizer>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="p3k-rS-FTV">
+                    <connections>
+                        <action selector="handlePanWithRecognizer:" destination="BYZ-38-t0r" id="JdD-KG-0MG"/>
+                    </connections>
+                </panGestureRecognizer>
+                <pinchGestureRecognizer id="3v1-b2-Qz7">
+                    <connections>
+                        <action selector="handlePinchWithRecognizer:" destination="BYZ-38-t0r" id="zsX-Yx-d1h"/>
+                    </connections>
+                </pinchGestureRecognizer>
+                <pinchGestureRecognizer id="RJY-um-Tj1">
+                    <connections>
+                        <action selector="handlePinchWithRecognizer:" destination="BYZ-38-t0r" id="7S4-jB-4LJ"/>
+                    </connections>
+                </pinchGestureRecognizer>
+                <rotationGestureRecognizer id="S59-1K-Qpx">
+                    <connections>
+                        <action selector="handleRotateWithRecognizer:" destination="BYZ-38-t0r" id="gnr-HC-6QJ"/>
+                    </connections>
+                </rotationGestureRecognizer>
+                <rotationGestureRecognizer id="iRH-2f-fd3">
+                    <connections>
+                        <action selector="handleRotateWithRecognizer:" destination="BYZ-38-t0r" id="hwG-gk-D0B"/>
+                    </connections>
+                </rotationGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="32.799999999999997" y="37.331334332833585"/>
         </scene>
