--- a/OverTap/Base.lproj/Main.storyboard
+++ b/OverTap/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -13,23 +14,18 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="OverTap" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Jie-lz-dSN"/>
+                        <viewControllerLayoutGuide type="bottom" id="5e6-yW-Fob"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" id="ooK-by-ZM8">
-                                <rect key="frame" x="59" y="75" width="128" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <gestureRecognizers/>
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="Oho-UH-HBT" appends="YES" id="FFR-y1-lEB"/>
-                                    <outletCollection property="gestureRecognizers" destination="RJY-um-Tj1" appends="YES" id="NEY-hB-lX4"/>
-                                    <outletCollection property="gestureRecognizers" destination="iRH-2f-fd3" appends="YES" id="lH1-i4-7Kj"/>
-                                </connections>
-                            </view>
-                            <view contentMode="scaleToFill" id="9yp-hq-BXm">
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9yp-hq-BXm">
                                 <rect key="frame" x="189" y="410" width="128" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <gestureRecognizers/>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="p3k-rS-FTV" appends="YES" id="Ztt-3P-Wka"/>
@@ -37,10 +33,36 @@
                                     <outletCollection property="gestureRecognizers" destination="S59-1K-Qpx" appends="YES" id="cnN-gP-Iao"/>
                                 </connections>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Intersection!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7a2-hs-P7J">
+                                <rect key="frame" x="16" y="28" width="343" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="lbm-HW-RzB"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ooK-by-ZM8">
+                                <rect key="frame" x="47" y="105" width="128" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="Oho-UH-HBT" appends="YES" id="FFR-y1-lEB"/>
+                                    <outletCollection property="gestureRecognizers" destination="RJY-um-Tj1" appends="YES" id="NEY-hB-lX4"/>
+                                    <outletCollection property="gestureRecognizers" destination="iRH-2f-fd3" appends="YES" id="lH1-i4-7Kj"/>
+                                </connections>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="7a2-hs-P7J" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="NGN-pI-E8v"/>
+                            <constraint firstItem="7a2-hs-P7J" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="OeI-EP-d8H"/>
+                            <constraint firstItem="7a2-hs-P7J" firstAttribute="top" secondItem="Jie-lz-dSN" secondAttribute="bottom" constant="8" symbolic="YES" id="m5J-yi-0gn"/>
+                        </constraints>
                     </view>
                     <connections>
+                        <outlet property="headerLabel" destination="7a2-hs-P7J" id="yW5-Nm-xay"/>
                         <outlet property="view1" destination="ooK-by-ZM8" id="uHV-KW-sRS"/>
                         <outlet property="view2" destination="9yp-hq-BXm" id="Yxo-Us-3q7"/>
                     </connections>
