--- a/OverTap/Base.lproj/Main.storyboard
+++ b/OverTap/Base.lproj/Main.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Shapes View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="OverTap" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ShapesViewController" customModule="OverTap" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Jie-lz-dSN"/>
                         <viewControllerLayoutGuide type="bottom" id="5e6-yW-Fob"/>
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9yp-hq-BXm">
-                                <rect key="frame" x="189" y="410" width="128" height="128"/>
+                                <rect key="frame" x="208" y="315" width="128" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <gestureRecognizers/>
@@ -53,6 +53,17 @@
                                     <outletCollection property="gestureRecognizers" destination="iRH-2f-fd3" appends="YES" id="lH1-i4-7Kj"/>
                                 </connections>
                             </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ycn-59-rra">
+                                <rect key="frame" x="47" y="488" width="128" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="8lg-9I-h1o" appends="YES" id="rag-rH-V3t"/>
+                                    <outletCollection property="gestureRecognizers" destination="DvY-db-W6n" appends="YES" id="POC-eH-6ZM"/>
+                                    <outletCollection property="gestureRecognizers" destination="wCz-lW-BPj" appends="YES" id="K5n-L3-DuR"/>
+                                </connections>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -65,6 +76,8 @@
                         <outlet property="headerLabel" destination="7a2-hs-P7J" id="yW5-Nm-xay"/>
                         <outlet property="view1" destination="ooK-by-ZM8" id="uHV-KW-sRS"/>
                         <outlet property="view2" destination="9yp-hq-BXm" id="Yxo-Us-3q7"/>
+                        <outlet property="view3" destination="Ycn-59-rra" id="gKC-IA-VgZ"/>
+                        <segue destination="6wK-Oc-Nd2" kind="modal" identifier="Credits" id="Jww-le-NeR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -99,8 +112,78 @@
                         <action selector="handleRotateWithRecognizer:" destination="BYZ-38-t0r" id="hwG-gk-D0B"/>
                     </connections>
                 </rotationGestureRecognizer>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="8lg-9I-h1o">
+                    <connections>
+                        <action selector="handlePanWithRecognizer:" destination="BYZ-38-t0r" id="pYX-fA-rEq"/>
+                        <outlet property="delegate" destination="BYZ-38-t0r" id="amz-JB-Twx"/>
+                    </connections>
+                </panGestureRecognizer>
+                <pinchGestureRecognizer id="DvY-db-W6n">
+                    <connections>
+                        <action selector="handlePinchWithRecognizer:" destination="BYZ-38-t0r" id="hei-JK-BiP"/>
+                        <outlet property="delegate" destination="BYZ-38-t0r" id="aBo-ca-CgL"/>
+                    </connections>
+                </pinchGestureRecognizer>
+                <rotationGestureRecognizer id="wCz-lW-BPj">
+                    <connections>
+                        <action selector="handleRotateWithRecognizer:" destination="BYZ-38-t0r" id="87t-eg-n4C"/>
+                        <outlet property="delegate" destination="BYZ-38-t0r" id="W2C-RC-J3h"/>
+                    </connections>
+                </rotationGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="20.5" y="41.5"/>
+        </scene>
+        <!--Credits View Controller-->
+        <scene sceneID="NNV-rg-kv6">
+            <objects>
+                <viewController id="6wK-Oc-Nd2" customClass="CreditsViewController" customModule="OverTap" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="aCh-II-5BX"/>
+                        <viewControllerLayoutGuide type="bottom" id="gyI-Rx-8Cj"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="BLa-Hw-Omv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="OverTap" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jal-zo-4ZK">
+                                <rect key="frame" x="16" y="64" width="343" height="51"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="27"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="OverTap was developed by William Caruso for the Siri Advanced Development Group Apple Inc." textAlignment="center" lineBreakMode="wordWrap" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WXq-5z-rvS">
+                                <rect key="frame" x="16" y="116" width="343" height="120"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9Qv-3l-005">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Credits" id="WCy-Sf-Ao7">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="lBk-x8-dZt">
+                                            <connections>
+                                                <action selector="BackButton:" destination="6wK-Oc-Nd2" id="by6-0X-kwW"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="rPP-EB-ImQ">
+                                            <connections>
+                                                <action selector="ShareButton:" destination="6wK-Oc-Nd2" id="fPf-1G-ghG"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KZF-cH-gfk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="553.5" y="41.5"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
